--- a/precastr/Base.lproj/Main.storyboard
+++ b/precastr/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14810.12" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="a6n-jY-43O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="a6n-jY-43O">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14766.15"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -271,6 +271,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="yOG-g2-dfk"/>
                     </view>
+                    <navigationItem key="navigationItem" id="IvD-DY-KX9"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="countryCancelLabel" destination="IcR-u5-3YH" id="4Pc-V6-Nu7"/>
@@ -287,7 +288,7 @@
             <objects>
                 <navigationController id="8dm-zh-2nj" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="N5y-u3-U9T">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -570,7 +571,7 @@
             <objects>
                 <navigationController storyboardIdentifier="precastTypeNav" useStoryboardIdentifierAsRestorationIdentifier="YES" id="46P-gX-Vbx" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dVl-df-I9M">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.047058823530000002" green="0.43529411759999997" blue="0.91372549020000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
@@ -668,8 +669,9 @@
                     <connections>
                         <segue destination="qba-MY-KTk" kind="relationship" relationship="viewControllers" id="0cb-mg-TdQ"/>
                         <segue destination="kO2-V3-cUf" kind="relationship" relationship="viewControllers" id="zMP-JF-iks"/>
-                        <segue destination="uZW-Lw-sMa" kind="relationship" relationship="viewControllers" id="RAZ-k4-bCr"/>
-                        <segue destination="dKk-LM-Ied" kind="relationship" relationship="viewControllers" id="Fei-xi-9w0"/>
+                        <segue destination="7gu-p6-Gz0" kind="relationship" relationship="viewControllers" id="K8Z-Wm-3pp"/>
+                        <segue destination="uZW-Lw-sMa" kind="relationship" relationship="viewControllers" id="cuK-cd-rny"/>
+                        <segue destination="dKk-LM-Ied" kind="relationship" relationship="viewControllers" id="lIV-Tq-S2O"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0hB-wC-gLH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1272,7 +1274,7 @@
             <objects>
                 <viewController storyboardIdentifier="ModeratorPhoneNumberViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tod-km-QSJ" customClass="ModeratorPhoneNumberViewController" customModule="precastr" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NHG-0M-GER">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qaf-qZ-bOS">
@@ -1303,11 +1305,11 @@
             <objects>
                 <viewController storyboardIdentifier="CastContactsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="DdO-Iz-7eE" customClass="CastContactsViewController" customModule="precastr" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oQ9-uY-R35">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="C6Z-RQ-SLO">
-                                <rect key="frame" x="0.0" y="135" width="375" height="463"/>
+                                <rect key="frame" x="0.0" y="135" width="375" height="483"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
@@ -1432,7 +1434,7 @@
             <objects>
                 <viewController storyboardIdentifier="CommunicationViewController" title="Cast Detail" useStoryboardIdentifierAsRestorationIdentifier="YES" id="isS-Sv-T1f" customClass="CommunicationViewController" customModule="precastr" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="U1z-Qa-lav">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Scb-hc-IQ7">
@@ -1479,7 +1481,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="31B-Qx-a1r">
-                                <rect key="frame" x="0.0" y="470" width="375" height="130"/>
+                                <rect key="frame" x="0.0" y="490" width="375" height="130"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i3A-O3-yWF">
@@ -1528,7 +1530,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" contentInsetAdjustmentBehavior="never" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" sectionFooterHeight="-1" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kk3-st-DCF">
-                                <rect key="frame" x="0.0" y="120" width="375" height="332"/>
+                                <rect key="frame" x="0.0" y="120" width="375" height="352"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
@@ -1655,7 +1657,7 @@
                                 <color key="currentPageIndicatorTintColor" red="0.047058823530000002" green="0.43529411759999997" blue="0.91372549020000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </pageControl>
                         </subviews>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="Xnh-zh-OYB"/>
                     </view>
                     <connections>
@@ -1729,6 +1731,53 @@
             </objects>
             <point key="canvasLocation" x="549.60000000000002" y="3837.9310344827591"/>
         </scene>
+        <!--Archieve-->
+        <scene sceneID="9h7-KK-bvk">
+            <objects>
+                <navigationController id="7gu-p6-Gz0" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Archieve" selectedImage="home-black" id="fcj-sE-8B1"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Y0D-xo-7kF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Zcl-fg-4iO" kind="relationship" relationship="rootViewController" id="rzS-p1-wqv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kk5-2Z-X5h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-225" y="4630"/>
+        </scene>
+        <!--Archieve View Controller-->
+        <scene sceneID="jd2-S8-mBJ">
+            <objects>
+                <viewController storyboardIdentifier="ArchieveViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Zcl-fg-4iO" customClass="ArchieveViewController" customModule="precastr" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mNb-B0-Qgc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VSa-Zi-jJc">
+                                <rect key="frame" x="0.0" y="44" width="375" height="574"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Zcl-fg-4iO" id="sbb-Vz-Fhu"/>
+                                    <outlet property="delegate" destination="Zcl-fg-4iO" id="7mO-sF-fgP"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Akt-hG-fwX"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="fMv-kh-dLw"/>
+                    <connections>
+                        <outlet property="postsTableView" destination="VSa-Zi-jJc" id="zlr-7F-Tnq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bge-HO-S3p" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="616.79999999999995" y="4629.5352323838088"/>
+        </scene>
         <!--My Account-->
         <scene sceneID="3sn-ht-Eyw">
             <objects>
@@ -1736,6 +1785,7 @@
                     <tabBarItem key="tabBarItem" title="My Account" image="my-account-black" selectedImage="my-account" id="qUf-mh-uu7">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-4"/>
                     </tabBarItem>
+                    <navigationItem key="navigationItem" id="7Zr-YW-jBy"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="NXA-Ef-yEn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1877,7 +1927,7 @@
             <objects>
                 <viewController storyboardIdentifier="HomeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Uot-g3-E5O" customClass="HomeViewController" customModule="precastr" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0X9-9D-hVX">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="no-cast" translatesAutoresizingMaskIntoConstraints="NO" id="m2U-zb-Jxv">
@@ -1892,7 +1942,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" sectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="qFE-ao-mEh">
-                                <rect key="frame" x="0.0" y="64" width="375" height="534"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -1953,8 +2003,8 @@
         <image name="twitter-group" width="20" height="20"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="9cd-nP-F1L"/>
-        <segue reference="NGY-dz-YZp"/>
+        <segue reference="cuK-cd-rny"/>
+        <segue reference="0cb-mg-TdQ"/>
         <segue reference="pyB-LE-lgF"/>
         <segue reference="vqc-vD-fxp"/>
         <segue reference="fxt-0a-n1d"/>
